--- a/client/app/views/songs.html
+++ b/client/app/views/songs.html
@@ -5,8 +5,8 @@
         <input type="text" ng-model="songFilter">
     </md-input-container>
     <div class="md-whiteframe-8dp" ng-repeat="song in songs|filter:songFilter" layout="column">
-        <md-content ng-class="{'md-content-active' : playing === song.title}">
-            <md-list-item class="md-3-line" ng-click="playSong(song)" flex>
+        <md-content>
+            <md-list-item class="md-3-line" ng-click="playSong(song)" flex ng-class="{'md-content-active' : playing === song.title}">
                 <div class="md-list-item-text" layout="column">
                     <h3>{{ song.title }}</h3>
                     <h4>{{ song.album }}</h4>
