Comments section reddit

--- a/client/app/partials/reddit-listings.html
+++ b/client/app/partials/reddit-listings.html
@@ -51,7 +51,7 @@
     <md-list layout-padding>
         <div ng-repeat="post in posts|limitTo:attributes.number" class="md-whiteframe-8dp" layout="column">
             <md-content>
-                <md-list-item class="md-3-line" ng-click="openTab(post.permalink)" flex>
+                <md-list-item class="md-3-line" ui-sref="reddit.listings.detail({id: post.id})" flex>
                     <img src="{{post.thumbnail}}" width="80px" height="80px" layout-padding ng-if="post.thumbnail"/>
                     <div class="md-list-item-text" layout="column" flex>
                         <h3 class="md-subhead">[ <span class="icon-text">{{post.ups}}</span><md-icon md-svg-icon="assets/icons/keyboard_arrow_up_black.svg"></md-icon>] {{post.title}}</h3>
