--- a/client/app/views/reddit.html
+++ b/client/app/views/reddit.html
@@ -31,7 +31,7 @@
 </md-toolbar>
 <md-content style="height: 100%;" ng-if="!loading" flex ng-cloak>
     <section>
-        <div ui-view></div>
+        <div ui-view="content"></div>
     </section>
 </md-content>
 </div>
