--- a/client/app/views/reddit.html
+++ b/client/app/views/reddit.html
@@ -9,6 +9,9 @@
         <md-menu md-position-mode="target-right target" layout="column" layout-align="center center">
             <md-button class="md-icon-button" aria-label="controls" ng-click="$mdOpenMenu($event)">
                 <md-icon md-svg-icon="assets/icons/assignment.svg"></md-icon>
+                <md-tooltip md-direction="bottom" md-visible="tooltipVisible" md-autohide="true">
+                    Subreddits
+                </md-tooltip>
             </md-button>
             <md-menu-content width="2">
             <div ng-repeat="subreddit in subreddits" layout="column">
@@ -20,6 +23,9 @@
         <md-menu md-position-mode="target-right target" layout="column" layout-align="center center">
             <md-button class="md-icon-button" aria-label="controls" ng-click="$mdOpenMenu($event)">
                 <md-icon md-svg-icon="assets/icons/apps.svg"></md-icon>
+                <md-tooltip md-direction="bottom" md-visible="tooltipVisible" md-autohide="true">
+                    Apps
+                </md-tooltip>
             </md-button>
             <md-menu-content width="2">
                 <md-button ui-sref="reddit"><span md-menu-align-target>Reddit</span></md-button>
