--- a/client/app/views/songs.html
+++ b/client/app/views/songs.html
@@ -4,23 +4,17 @@
         <md-icon md-svg-src="assets/icons/search_black.svg" class="name"></md-icon>
         <input type="text" ng-model="songFilter">
     </md-input-container>
-    <div class="md-whiteframe-8dp" ng-repeat="song in songs|filter:songFilter" layout="column">
-        <md-content>
+    <div ng-repeat="song in songs|filter:songFilter" layout="column">
+        <md-content class="md-whiteframe-8dp">
             <md-list-item class="md-3-line" ng-click="playSong(song)" flex ng-class="{'md-content-active' : playing === song.title}">
                 <div class="md-list-item-text" layout="column">
                     <h3>{{ song.title }}</h3>
                     <h4>{{ song.album }}</h4>
                     <p>{{ song.year }}</p>
                 </div>
-                <md-menu md-position-mode="target-right target" layout="column" layout-align="center center">
-                    <md-button class="md-icon-button" aria-label="controls" ng-click="$mdOpenMenu($event)">
-                        <md-icon md-svg-icon="assets/icons/menu_black.svg".svg"></md-icon>
-                    </md-button>
-                    <md-menu-content width="2">
-                        <md-button class="md-primary" ng-click="addPlaylist(song)"><span md-menu-align-target>Add to playlist</span></md-button>
-                        <md-button class="md-warn" ng-click="addPlaylist(song)"><span md-menu-align-target>Info</span></md-button>
-                    </md-menu-content>
-                </md-menu>
+                <md-button aria-label="menu" class="md-secondary md-fab md-mini md-primary" ng-click="addPlaylist(song)">
+                    <md-icon md-svg-src="assets/icons/playlist_add.svg" aria-label="add_playlist"></md-icon>
+                </md-button>
             </md-list-item>
             <!-- <md-fab-speed-dial md-direction="right" md-open="demo.isOpen" class="md-fling md-avatar-icon" ng-mouseenter="demo.isOpen=true" ng-mouseleave="demo.isOpen=false">
                 <md-fab-trigger>
